[gd_scene load_steps=14 format=3 uid="uid://wyrxg6dlsry4"]

[ext_resource type="MeshLibrary" uid="uid://ry7ef4oi4gp2" path="res://Assets/Meshes/dungeon_tileset.tres" id="1_fmiva"]
[ext_resource type="Script" path="res://Scenes/World/main.gd" id="1_hugcn"]
[ext_resource type="PackedScene" uid="uid://cg02mjxvognn1" path="res://Scenes/Player/Player.tscn" id="2_cdrrv"]
[ext_resource type="PackedScene" uid="uid://dtnevh1eagoqk" path="res://Scenes/Tileset/chest.tscn" id="4_b2emw"]
[ext_resource type="PackedScene" uid="uid://b2aioaho0rgm2" path="res://Scenes/Enemy/enemy.tscn" id="4_wvjda"]
[ext_resource type="PackedScene" uid="uid://docjn5forn874" path="res://Scenes/UI/inventory.tscn" id="5_hykdu"]
[ext_resource type="Script" path="res://Scenes/UI/InventoryManager.gd" id="5_rf7bj"]
[ext_resource type="PackedScene" uid="uid://b2yiuhtvcyt8u" path="res://Scenes/UI/grabbed_inventory_slot.tscn" id="7_6k4vu"]
[ext_resource type="Script" path="res://Scenes/UI/Party/PartyManager.gd" id="9_ko7i4"]
[ext_resource type="PackedScene" uid="uid://blf4o5o40v0hm" path="res://Scenes/UI/Party/party.tscn" id="9_o6dsp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_o65al"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_3c0d5"]
sky_material = SubResource("ProceduralSkyMaterial_o65al")

[sub_resource type="Environment" id="Environment_cb3rd"]
background_mode = 2
sky = SubResource("Sky_3c0d5")
ambient_light_color = Color(0.964706, 0.603922, 0.337255, 1)
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.964706, 0.603922, 0.337255, 1)
fog_light_energy = 0.2

[node name="World" type="Node3D"]
script = ExtResource("1_hugcn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cb3rd")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_fmiva")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(0, 0, 0, 65535, 0, 0, 65534, 0, 0, 65533, 0, 0, 65533, 65535, 0, 65532, 65535, 0, 65532, 65534, 0, 65532, 65533, 0, 65533, 65533, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 65535, 65531, 0, 0, 65531, 0, 1, 65531, 0, 1, 65532, 0, 2, 65533, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 1, 1, 0, 0, 1, 0, 0, 65535, 0, 0, 65534, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 65535, 1, 0, 65534, 1, 0, 65532, 0, 0, 65532, 1, 0, 65533, 1, 0, 65533, 2, 0, 65534, 2, 0, 65535, 65535, 0, 65535, 65534, 0, 65535, 65533, 0, 65534, 65535, 0, 65534, 65534, 0, 65533, 65534, 0, 65534, 65533, 0, 0, 65533, 0, 65535, 2, 0, 65535, 3, 0, 65534, 3, 0, 2, 2, 0, 3, 2, 0, 3, 1, 0, 3, 0, 0, 3, 65535, 0, 3, 65534, 0, 3, 65533, 0, 3, 65532, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 1, 2, 0, 0, 2, 0, 2, 65532, 0, 2, 65531, 0, 3, 65531, 0, 65534, 65531, 0, 65533, 65531, 0, 65532, 65531, 0, 65532, 65532, 0, 65531, 65531, 0, 0, 65532, 0, 65531, 65532, 8, 65531, 65533, 8, 65531, 65534, 0, 65531, 65535, 8, 65531, 0, 8, 65531, 1, 0, 65531, 2, 8, 65533, 3, 0, 65532, 3, 0, 65532, 2, 0, 65531, 3, 8, 3, 3, 0, 3, 4, 0, 2, 4, 0, 1, 4, 0, 0, 4, 0, 65535, 4, 0, 65534, 4, 0, 65533, 4, 0, 65532, 4, 0, 65531, 4, 8, 65535, 5, 15, 65535, 65530, 15, 65534, 65530, 1, 65533, 65530, 1, 65532, 65530, 0, 65531, 65530, 9, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 65531, 5, 4, 65532, 5, 4, 65533, 5, 4, 65534, 5, 4, 0, 5, 4, 1, 5, 4, 2, 5, 4, 3, 5, 4, 4, 65530, 2, 4, 65531, 2, 4, 65532, 2, 4, 65533, 2, 4, 65534, 2, 4, 65535, 2, 4, 0, 2, 4, 1, 2, 4, 2, 2, 4, 3, 2, 4, 4, 2, 4, 65529, 3, 3, 65529, 1, 2, 65529, 1, 1, 65529, 1, 0, 65529, 9, 65532, 65529, 10, 65532, 65528, 10, 65532, 65527, 10, 65532, 65526, 10, 65532, 65525, 10, 65532, 65524, 10, 65532, 65523, 11, 4, 5, 6, 65530, 5, 13, 65530, 65534, 5, 65530, 65531, 5, 65530, 1, 5, 65527, 65534, 15, 65527, 65531, 15, 65527, 1, 15, 65525, 65530, 9, 65525, 2, 12, 65525, 1, 8, 65525, 0, 8, 65525, 65535, 8, 65525, 65534, 8, 65525, 65533, 8, 65525, 65532, 8, 65525, 65531, 8, 65526, 65530, 1, 65527, 65530, 1, 65529, 65530, 3, 65528, 65530, 1, 65526, 2, 4, 65527, 2, 4, 65528, 2, 4, 65529, 2, 6, 65526, 65531, 0, 65528, 65531, 0, 65529, 65531, 0, 65528, 65532, 0, 65527, 65532, 0, 65526, 65532, 0, 65527, 65533, 0, 65526, 65533, 0, 65526, 65534, 0, 65526, 65535, 0, 65526, 0, 0, 65526, 1, 0, 65528, 0, 0, 65528, 1, 0, 65528, 65535, 2, 65527, 65535, 0, 65527, 0, 0, 65528, 65534, 0, 65528, 65533, 2, 65529, 65532, 6, 65529, 65534, 5, 65529, 0, 3, 65529, 1, 0)
}

[node name="Player" parent="." instance=ExtResource("2_cdrrv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0.5)

[node name="Chest" parent="." instance=ExtResource("4_b2emw")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.5, 0, 0.5)

[node name="Enemy" parent="." instance=ExtResource("4_wvjda")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 1.5, 0, -5.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryManager" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_rf7bj")
metadata/_edit_use_anchors_ = true

[node name="PlayerInventory" parent="UI/InventoryManager" instance=ExtResource("5_hykdu")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="GrabbedSlot" parent="UI/InventoryManager" instance=ExtResource("7_6k4vu")]
visible = false
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0

[node name="ChestInventory" parent="UI/InventoryManager" instance=ExtResource("5_hykdu")]
visible = false
layout_mode = 0

[node name="PartyManager" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("9_ko7i4")

[node name="Party" parent="UI/PartyManager" instance=ExtResource("9_o6dsp")]
layout_mode = 1
anchors_preset = -1
anchor_left = -14.8
anchor_top = 1.0
anchor_right = -14.8
anchor_bottom = 1.0
offset_left = 85.0001
offset_top = -104.0
offset_right = 704.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="close_while_selected" from="." to="UI/InventoryManager" method="_on_world_close_while_selected"]
[connection signal="inventory_clicked" from="Chest" to="." method="_on_chest_inventory_clicked"]
[connection signal="portrait_inventory_opened" from="UI/PartyManager/Party" to="UI/InventoryManager" method="_on_party_portrait_inventory_opened"]
